# Together

./: CMakeLists.txt  main.cpp  main.qml
Components/: Card.qml
android/: AndroidManifest.xml
